fix: Mobile menu overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -133,7 +133,7 @@ footer {
 }
 .page-header nav.show a {
   margin: 0 auto;
-  font-size: 1.75em;
+  font-size: 1.5em;
   line-height: 1.5;
   display: block;
   border-bottom: 3px solid #555;
@@ -147,7 +147,7 @@ footer {
   color: var(--nav-link-color);
 }
 .page-header nav.show a:not(:last-of-type) {
-  margin-bottom: 2.5em
+  margin-bottom: 1.8em
 }
 .page-header nav.show button {
   font-size: 1em;
